--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -790,9 +790,9 @@
                                         </th>-->
                                         <th align="right" name="item_subtotal" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
-                                            <span class="lable_bold">Subtotal Inclusive</span>
+                                            <span class="lable_bold">Subtotal </span>
                                             <br/>
-                                            <span class="lable_bold">of VAT</span>
+                                            <span class="lable_bold">Inclusive of VAT</span>
                                             <br/>
                                             <span class="lable_bold">إﺟﻤﺎﻟﻲ اﻟﻤﺒﻠﻎ  </span>
                                               <br/>
