--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -743,6 +743,7 @@
                                             <br/>
                                             <span class="lable_bold">ﺳﻌﺮ اﻟﻮﺣﺪة</span>
                                         </th>
+
                                         <th align="center" name="quantity" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Quantity</span>
@@ -761,6 +762,12 @@
                                             <span class="lable_bold">UOM</span>
                                             <br/>
                                             <span class="lable_bold">الوحدة</span>
+                                        </th>
+                                        <th align="center" name="discount" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">UOMname</span>
+                                            <br/>
+                                            <span class="lable_bold">اسم الوحدة</span>
                                         </th>
 
 
@@ -840,6 +847,9 @@
                                         </td>
                                          <td class="second_table" style="text-align:right;">
                                               <span t-esc="line.product_uom_id.name"/>
+                                        </td>
+                                         <td class="second_table" style="text-align:right;">
+                                              <span t-esc="line.name_field"/>
                                         </td>
                                                 <!-- Editeing-->
 
