--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -36,8 +36,7 @@
                 <xpath expr="//field[@name='lines']/tree/field[@name='full_product_name']" position="after">
                     <field name="product_uom_id"/>
                     <field name="Ratio"/>
-
-                    <field name="name_field" />
+                     <field name="name_field" />
                 </xpath>
             </field>
      </record>
@@ -82,7 +81,9 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
-   <field name="name_field" />
+                 <field name="selected_uom_ids" invisible="1"/>
+                 <field name="sales_multi_uom_id" />
+                 <field name="name_field" />
             </xpath>
 
 
