--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -86,7 +86,9 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
 
-                 <field name="name_field" />
+                  <field name="selected_uom_ids" invisible="1"/>
+                    <field name="sales_multi_uom_id" widget="many2one"/>
+                                                          <field name="name_field" />
             </xpath>
 
 
