--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -88,6 +88,7 @@
 
                   <field name="selected_uom_ids" invisible="1"/>
                     <field name="sales_multi_uom_id" widget="many2one"/>
+                   <field name="name_field_2" />
                                                           <field name="name_field" />
             </xpath>
         </field>
