--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -36,7 +36,9 @@
                 <xpath expr="//field[@name='lines']/tree/field[@name='full_product_name']" position="after">
                     <field name="product_uom_id"/>
                     <field name="Ratio"/>
-                     <field name="name_field" />
+                   <field name="selected_uom_ids" invisible="1"/>
+                    <field name="sales_multi_uom_id" />
+                                                          <field name="name_field_2" />
                 </xpath>
             </field>
      </record>
