--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -76,7 +76,7 @@
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree//field[@name='product_qty']" position="after">
-                <field name="selected_uom_ids" modifiers="{'invisible': True}"/>
+                <field name="selected_uom_ids" invisible="1"/>
                     <field name="purchase_multi_uom_id" widget="many2one"/>
             </xpath>
             </field>
