--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -751,13 +751,13 @@
                                             <span class="lable_bold">الكمية</span>
                                         </th>
 
-                                       <!-- <th align="center" name="discount" class="second_table"
+                                       <th align="center" name="discount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Discount</span>
                                             <br/>
                                             <span class="lable_bold">خصومات</span>
-                                        </th>-->
-                                        <th align="center" name="discount" class="second_table"
+                                        </th>
+                                        <th align="center" name="disuom" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">UOM</span>
                                             <br/>
@@ -846,10 +846,10 @@
 
                                                 <!-- Editeing-->
 
-                                       <!-- <td class="second_table" style="text-align:right;">
+                                        <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_136(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                                        </td>-->
+                                        </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_131(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
