--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -81,7 +81,7 @@
         </field>
     </record>
 
-    
+
     <!-- -->
     <record model="ir.ui.view" id="inherit_product_product_stock_tree">
     <field name="name">product.product.stock.tree.inherit</field>
@@ -89,8 +89,8 @@
     <field name="inherit_id" ref="stock.product_product_stock_tree"/>
     <field name="arch" type="xml">
         <xpath expr="//field[@name='uom_id']" position="after">
-            <field name="sh_sec_qty" string="Secondary Qty" groups="sh_secondary_unit.group_secondary_unit_inventory" />
-            <field name="sh_sec_uom" options="{'no_open': True, 'no_create': True}" string="Secondary UOM" groups="sh_secondary_unit.group_secondary_unit_inventory" />
+            <field name="sh_secondary_uom" string="Secondary Qty" />
+            <field name="sh_secondary_uom_onhand" string="onhand Secondary Qty" />
         </xpath>
     </field>
     </record>
