--- a/custom-addons/sh_secondary_unit/views/product_template_views.xml
+++ b/custom-addons/sh_secondary_unit/views/product_template_views.xml
@@ -10,6 +10,9 @@
                 <field name="sh_is_secondary_unit" groups="sh_secondary_unit.group_secondary_unit_product"/>
                 <field name="sh_secondary_uom" widget="selection" invisible="not sh_is_secondary_unit" required="sh_is_secondary_unit" 
                     domain="[('category_id','=',category_id)]" groups="sh_secondary_unit.group_secondary_unit_product"/>
+                 <field name="sh_secondary_uom2" widget="selection" invisible="not sh_is_secondary_unit" required="sh_is_secondary_unit"
+                    domain="[('category_id','=',category_id)]" groups="sh_secondary_unit.group_secondary_unit_product"/>
+
             </xpath>
         </field>
     </record>
