--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -82,7 +82,7 @@
     </record>
 
 
-    <!-- -->
+    <!--tessst najwa -->
     <record model="ir.ui.view" id="inherit_product_product_stock_tree">
     <field name="name">product.product.stock.tree.inherit</field>
     <field name="model">product.product</field>
@@ -94,8 +94,10 @@
 
             <field name="sh_secondary_uom2" string="Secondary Qty2" />
             <field name="sh_secondary_uom_onhand2" string="onhand Secondary Qty2" />
+            
+            <field name="sales_multi_uom_id" string="test niclo" />
         </xpath>
     </field>
     </record>
-
+    <!--tessst najwa -->
 </odoo>
