--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -96,6 +96,7 @@
             <field name="sh_secondary_uom_onhand2" string="onhand Secondary Qty2" />
 
             <field name="sales_multi_uom_id" string="test niclo" />
+            <field name="selected_uom_ids" string="test niclo" />
         </xpath>
     </field>
     </record>
