--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -89,14 +89,15 @@
     <field name="inherit_id" ref="stock.product_product_stock_tree"/>
     <field name="arch" type="xml">
         <xpath expr="//field[@name='uom_id']" position="after">
-            <field name="sh_secondary_uom" string="Secondary Qty" />
+            <!--<field name="sh_secondary_uom" string="Secondary Qty" />
             <field name="sh_secondary_uom_onhand" string="onhand Secondary Qty" />
 
             <field name="sh_secondary_uom2" string="Secondary Qty2" />
-            <field name="sh_secondary_uom_onhand2" string="onhand Secondary Qty2" />
+            <field name="sh_secondary_uom_onhand2" string="onhand Secondary Qty2" /> -->
 
-            <field name="uom_id_1" string="test niclo" />
-            <field name="uom_id_1_onhand1" string="test niclo" />
+            <field name="uom_id_1" string="UOM1" />
+            <field name="uom_id_1_onhand1" string="QTY1" />
+
             <field name="uom_id_2" string="test niclo" />
             <field name="uom_id_3" string="test niclo" />
 
