--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -107,6 +107,9 @@
             <field name="uom_id_4" string="UOM4" />
             <field name="uom_id_4_onhand4" string="QTY4" />
 
+            <field name="uom_id_5" string="UOM5" />
+            <field name="uom_id_5_onhand5" string="QTY5" />
+
         </xpath>
     </field>
     </record>
