--- a/custom-addons/sh_secondary_unit/views/stock_move_views.xml
+++ b/custom-addons/sh_secondary_unit/views/stock_move_views.xml
@@ -95,23 +95,23 @@
             <field name="sh_secondary_uom2" string="Secondary Qty2" />
             <field name="sh_secondary_uom_onhand2" string="onhand Secondary Qty2" /> -->
 
-            <field name="uom_id_1" string="UOM1" />
-            <field name="uom_id_1_onhand1" string="QTY1" />
+            <field name="uom_id_1" string="الوحدة ١" />
+            <field name="uom_id_1_onhand1" string="الكمية ١" />
 
-            <field name="uom_id_2" string="UOM2" />
-            <field name="uom_id_2_onhand2" string="QTY2" />
+            <field name="uom_id_2" string="الوحدة ٢" />
+            <field name="uom_id_2_onhand2" string="الكمية ٢" />
 
-            <field name="uom_id_3" string="UOM3" />
-            <field name="uom_id_3_onhand3" string="QTY3" />
+            <field name="uom_id_3" string="الوحدة ٣" />
+            <field name="uom_id_3_onhand3" string="الكمية ٣" />
 
-            <field name="uom_id_4" string="UOM4" />
-            <field name="uom_id_4_onhand4" string="QTY4" />
+            <field name="uom_id_4" string="الوحدة ٤" />
+            <field name="uom_id_4_onhand4" string="الكمية ٤" />
 
-            <field name="uom_id_5" string="UOM5" />
-            <field name="uom_id_5_onhand5" string="QTY5" />
+            <field name="uom_id_5" string="الوحدة ٥" />
+            <field name="uom_id_5_onhand5" string="الكمية ٥" />
 
-            <field name="uom_id_6" string="UOM6" />
-            <field name="uom_id_6_onhand6" string="QTY6" />
+            <field name="uom_id_6" string="الوحدة ٦" />
+            <field name="uom_id_6_onhand6" string="الكمية ٦" />
 
 
         </xpath>
