--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -751,6 +751,13 @@
                                             <span class="lable_bold">الكمية</span>
                                         </th>
 
+                                        <th align="center" name="quantity" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">Quantity</span>
+                                            <br/>
+                                            <span class="lable_bold">name_field</span>
+                                        </th>
+
                                        <th align="center" name="discount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Discount</span>
@@ -837,6 +844,11 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
+
+                                        </td>
+
+                                         <td class="second_table" style="text-align:right;">
+                                            <span t-esc="'{:,}'.format(line.name_field)"/>
 
                                         </td>
 
