--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
@@ -204,7 +204,7 @@
                                             </td>
                                         </tr>
                                     </t>
-                                    <tr>
+                                   <!-- <tr>
                                         <td>
                                             <span class="label_column">
                                                 <b>Supply Date</b>
@@ -218,7 +218,7 @@
                                         <td>
                                             <span class="label_column arabic_label">ﺗﺎرﻳﺦ اﻟﺘﻮرﻳﺪ</span>
                                         </td>
-                                    </tr>
+                                    </tr>-->
                                     <!--                            Company/Seller details -->
                                     <tr>
                                         <td>
@@ -373,6 +373,11 @@
                                             <br/>
                                             <span class="label_column">Quantity</span>
                                         </th>
+                                        <th class="invline_column">
+                                            <span class="label_column arabic_label">المنتج </span>
+                                            <br/>
+                                            <span class="label_column" >product</span>
+                                        </th>
                                         <!--                                <th class="invline_column" style="text-align:center;">-->
                                         <!--                                    نوع<br/>Type-->
                                         <!--                                </th>-->
@@ -401,6 +406,10 @@
                                             </td>
                                             <td class="invline_data">
                                                 <t t-esc="line.quantity"/>
+                                            </td>
+                                            <td class="invline_data"
+                                                style="text-align:center;max-width:100%">
+                                                <span t-esc="doc._get_zatca_product_name(line)['name']['value']"/>
                                             </td>
                                             <!--                                    <td class="invline_data">-->
                                             <!--                                        <t t-esc="line.product_uom_id.name"/>-->
